--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -3,8 +3,18 @@
 </head>
 
 <body>
-  <h1>welcome to <strong>Bookers</strong>!!</h1>
-    <p>in<strong>Bookers</strong>,</p>
+  <header>
+    <span>Bookers</span>
+  </header>
+
+  <main>
+  <h1>"welcome to "<strong>Bookers</strong>"!!"</h1>
+    <p>"In"<strong>Bookers</strong>","</p>
     <p>you can share and exchange your opinions,inpressions,and emotions</p>
     <p>about various books!</p>
+  </main>
+
+  <footer>
+    <p>CopyRight Infratop.inc</p>
+  </footer>
 </body>
