--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -3,18 +3,8 @@
 </head>
 
 <body>
-  <header>
-    <span>Bookers</span>
-  </header>
-
-  <main>
-  <h1>"welcome to "<strong>Bookers</strong>"!!"</h1>
-    <p>"In"<strong>Bookers</strong>","</p>
+  <h1>welcome to <strong>Bookers</strong>!!</h1>
+    <p>In <strong>Bookers</strong>,</p>
     <p>you can share and exchange your opinions,inpressions,and emotions</p>
     <p>about various books!</p>
-  </main>
-
-  <footer>
-    <p>CopyRight Infratop.inc</p>
-  </footer>
 </body>
