--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,26 +1,4 @@
-<head>
-  <title>Bookers2</title>
-</head>
-
-<body>
-
-  <header>
-    <div>
-      <span>Bookers</span>
-    </div>
-  </header>
-
-  <main>
-    <div>
-      <h1>
-        "Welcome to "<strong>Bookers</strong>"!"
-      </h1>
-    </div>
-  </main>
-
-  <footer>
-    <div>
-      <p>CopyRight Infratop.inc</p>
-    </div>
-  </footer>
-</body>
+<h1>Welcom to
+  <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
+  <b>Bookers!!</b>
+</h1>
