--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,17 +1,13 @@
-<h1>Editing Book</h1>
-<% if flash[:notice] %>
-      <div class="flash">
-        <%= flash[:notice] %>
-      </div>
-<% end %>
-<%= form_with model:@book, url:"/books/#{@book.id}", local:true do |f| %>
-
-  <h4>Title</h4>
-  <%= f.text_field :title %>
-  <h4>Opinion</h4>
-  <%= f.text_field :body %>
-  <%= f.submit 'Update Book' %>
-<% end %>
-<%= link_to "Show", book_path(@book) %>
-|
-<p><a href="/books">Back</a></p>
+<div class="row">
+  <div class="col-xs-offset-3 col-xs-6">
+    <h1>Editing Book</h1>
+      <%= render 'books/error', model: @book %>
+      <%= render 'books/book', book: @book %>
+    <div class="menu">
+      <%= link_to "Show", book_path(@book) %>
+      |
+      <%= link_to "Back", books_path %>
+    </div>
+    </div>
+  <div class="col-xs-3"></div>
+</div>
