--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,54 +1,33 @@
-<head>
-  <title>WebcampBackendNew</title>
-</head>
-
-
-  <p id="notice"></p>
-  <h1 >Books</h1>
-
-  <table>
-    <thead>
-      <tr>
-        <th>Title</th>
-        <th>Opinion</th>
-        <th></th>
-      </tr>
-    </thead>
-   <tbody>
-    <% @books.each do |book| %>
-      <tr>
-        <td>
-          <%= book.title %>
-        </td>
-        <td>
-          <%= book.body %>
-        </td>
-        <td>
-          <%= link_to "show", book_path(book.id) %>
-          <%= link_to "edit", edit_user_path(book.id) %>
-          <%= link_to "destroy", book_path(book), method: :delete, "data-confirm" => "Are you sure?" %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-
-  <h2>New book</h2>
-  <% if @book.errors.any? %>
-  <%= @book.errors.count %>errors
-  <% @book.errors.full_messages.each do |message| %>
-  <%= message %>
-  <% end %>
-  <% end %>
-  <%= form_for(@book) do |f| %>
-
-  <p class="index-title">Title</p>
-  <%=f.text_field :title %>
-
-  <p class="index-body">Body</p>
-  <%= f.text_area :body %>
-
-  <br><%= f.submit 'Create Book' %></br>
-  <% end %>
-  <%= paginate @books %>
+<div class="container">
+  <div class="row">
+    <%= render 'books/error', model: @book %>
+    <div class="col-xs-3">
+      <%= render 'users/user', user: @user %>
+      <h2>New book</h2>
+      <%= render 'books/book', book: @book %>
+    </div>
+    <div class="col-xs-9">
+      <table class="table book-index">
+        <h2>Books</h2>
+        <thead>
+          <th></th>
+          <th>Title</th>
+          <th>Opinion</th>
+        </thead>
+        <tbody>
+          <% @books.each do |book| %>
+            <tr>
+              <td>
+                <%= link_to user_path(book.user) do %>
+                  <%= attachment_image_tag book.user, :profile_image, :fill, 50, 50,fallback: "no_image.jpg"%>
+                <% end %>
+              </td>
+              <td><%= link_to book.title, book_path(book.id) %></td>
+              <td><%= book.body %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
