--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,60 +8,63 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
+
   <body class="header">
-    <header class="navbar navbar-fixed-top navbar-inverse">
-      <div class="container">
-        <nav class="nav navbar-left">
-            <span class="title">Bookers</span>
-        </nav>
-        <nav>
-          <ul class="nav navbar-nav navbar-right">
-            <% if user_signed_in? %>
-              <li class="">
-                <%= link_to user_path(current_user), class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-home" aria-hidden="true"> Home</span>
-                <% end %>
-              </li>
-              <li class="">
-                <%= link_to users_path, class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-user" aria-hidden="true"> Users</span>
-                <% end %>
-              </li>
-              <li class="">
-                <%= link_to books_path, class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-book" aria-hidden="true"> Books</span>
-                <% end %>
-              </li>
-              <li class="">
-                <%= link_to destroy_user_session_path, method: :delete, class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-log-out" aria-hidden="true"> Logout</span>
-                <% end %>
-              </li>
-            <% else %>
-              <li class="">
-                <%= link_to root_path, class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-home" aria-hidden="true"> Home</span>
-                <% end %>
-              </li>
-              <li class="">
-                <%= link_to homes_about_path, class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-link" aria-hidden="true"> About</span>
-                <% end %>
-              </li>
-              <li class="">
-                <%= link_to new_user_registration_path, class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-edit" aria-hidden="true"> sign up</span>
-                <% end %>
-              </li>
-              <li class="">
-                <%= link_to new_user_session_path, class:"btn btn-link" do %>
-                <span class="glyphicon glyphicon-log-in" aria-hidden="true"> login</span>
-                <% end %>
-              </li>
-            <% end %>
-          </ul>
-        </nav>
-      </div>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <a class="navbar-brand" href="/">
+            <span>Bookers</span>
+          </a>
+          <nav>
+            <ul class="nav navbar-nav navbar-right">
+              <% if user_signed_in? %>
+                <li class="">
+                  <%= link_to user_path(current_user), class:"btn btn-link" do %>
+                  <span class="fas fa-home" aria-hidden="true"> Home</span>
+                  <% end %>
+                </li>
+                <li class="">
+                  <%= link_to users_path, class:"btn btn-link" do %>
+                  <span class="fas fa-user" aria-hidden="true"> Users</span>
+                  <% end %>
+                </li>
+                <li class="">
+                  <%= link_to books_path, class:"btn btn-link" do %>
+                  <span class="fas fa-book-open" aria-hidden="true"> Books</span>
+                  <% end %>
+                </li>
+                <li class="">
+                  <%= link_to destroy_user_session_path, method: :delete, class:"btn btn-link" do %>
+                  <span class="fas fa-sign-out-alt" aria-hidden="true"> Logout</span>
+                  <% end %>
+                </li>
+              <% else %>
+                <li class="">
+                  <%= link_to root_path, class:"btn btn-link" do %>
+                  <span class="fas fa-home" aria-hidden="true"> Home</span>
+                  <% end %>
+                </li>
+                <li class="">
+                  <%= link_to homes_about_path, class:"btn btn-link" do %>
+                  <span class="fas fa-link" aria-hidden="true"> About</span>
+                  <% end %>
+                </li>
+                <li class="">
+                  <%= link_to new_user_registration_path, class:"btn btn-link" do %>
+                  <span class="fas fa-user-plus" aria-hidden="true"> sign up</span>
+                  <% end %>
+                </li>
+                <li class="">
+                  <%= link_to new_user_session_path, class:"btn btn-link" do %>
+                  <span class="fas fa-sign-in-alt" aria-hidden="true"> login</span>
+                  <% end %>
+                </li>
+              <% end %>
+            </ul>
+          </nav>
+        </div>
+      </nav>
     </header>
     <div class="body">
       <p class="notice"><%= notice %></p>
@@ -70,7 +73,7 @@
 
 
         <footer>
-          <p class="text-right"> CopyRight Infratop.inc</p>
+          <p class="text-center"> CopyRight Infratop.inc</p>
         </footer>
       </div>
     </div>
