--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,46 +16,49 @@
           <a class="navbar-brand" href="/">
             <span>Bookers</span>
           </a>
-          <nav>
-            <ul class="nav navbar-nav navbar-right">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdpwn" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class ="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
               <% if user_signed_in? %>
-                <li class="">
+                <li class="nav-item">
                   <%= link_to user_path(current_user), class:"btn btn-link" do %>
                   <span class="fas fa-home" aria-hidden="true"> Home</span>
                   <% end %>
                 </li>
-                <li class="">
+                <li class="nav-item">
                   <%= link_to users_path, class:"btn btn-link" do %>
                   <span class="fas fa-user" aria-hidden="true"> Users</span>
                   <% end %>
                 </li>
-                <li class="">
+                <li class="nav-item">
                   <%= link_to books_path, class:"btn btn-link" do %>
                   <span class="fas fa-book-open" aria-hidden="true"> Books</span>
                   <% end %>
                 </li>
-                <li class="">
+                <li class="nav-item">
                   <%= link_to destroy_user_session_path, method: :delete, class:"btn btn-link" do %>
                   <span class="fas fa-sign-out-alt" aria-hidden="true"> Logout</span>
                   <% end %>
                 </li>
               <% else %>
-                <li class="">
+                <li class="nav-item">
                   <%= link_to root_path, class:"btn btn-link" do %>
                   <span class="fas fa-home" aria-hidden="true"> Home</span>
                   <% end %>
                 </li>
-                <li class="">
+                <li class="nav-item">
                   <%= link_to homes_about_path, class:"btn btn-link" do %>
                   <span class="fas fa-link" aria-hidden="true"> About</span>
                   <% end %>
                 </li>
-                <li class="">
+                <li class="nav-item">
                   <%= link_to new_user_registration_path, class:"btn btn-link" do %>
                   <span class="fas fa-user-plus" aria-hidden="true"> sign up</span>
                   <% end %>
                 </li>
-                <li class="">
+                <li class="nav-item">
                   <%= link_to new_user_session_path, class:"btn btn-link" do %>
                   <span class="fas fa-sign-in-alt" aria-hidden="true"> login</span>
                   <% end %>
