--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,4 +1,4 @@
 <h1>Welcom to
-  <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
+  <span class="fas fa-book" aria-hidden="true"></span>
   <b>Bookers!!</b>
 </h1>
