--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
                 </li>
                 <li class="nav-item">
                   <%= link_to users_path, class:"btn btn-link" do %>
-                  <span class="fas fa-user" aria-hidden="true"> Users</span>
+                  <span class="fas fa-users" aria-hidden="true"> Users</span>
                   <% end %>
                 </li>
                 <li class="nav-item">
@@ -76,7 +76,11 @@
 
 
         <footer>
-          <p class="text-center"> CopyRight Infratop.inc</p>
+          <div class="row">
+            <div class="mx-auto">
+              <p>CopyRight Infratop.inc</p>
+            </div>
+          </div>
         </footer>
       </div>
     </div>
