--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
                   <% end %>
                 </li>
                 <li class="nav-item">
-                  <%= link_to homes_about_path, class:"btn btn-link" do %>
+                  <%= link_to home_about_path, class:"btn btn-link" do %>
                   <span class="fas fa-link" aria-hidden="true"> About</span>
                   <% end %>
                 </li>
