--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,4 +1,9 @@
-<h1>Welcom to
-  <span class="fas fa-book" aria-hidden="true"></span>
-  <b>Bookers!!</b>
-</h1>
+<div class="container">
+  <div class="row">
+    <h1 class="px-3 mx-auto">Welcom to
+      <span class="fas fa-book" aria-hidden="true"></span>
+      <strong>Bookers</strong>
+      !
+    </h1>
+  </div>
+</div>
