--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,9 +76,11 @@
 
 
         <footer>
-          <div class="row">
-            <div class="mx-auto">
-              <p>CopyRight Infratop.inc</p>
+          <div class="container mt-5">
+            <div class="row">
+              <div class="mx-auto">
+                <p>CopyRight Infratop.inc</p>
+              </div>
             </div>
           </div>
         </footer>
