--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -16,7 +16,7 @@
     </tr>
     <tr>
       <th colspan="2">
-        <%= link_to edit_user_path(user.id), class:"btn btn-default btn-block" do %>
+        <%= link_to edit_user_path(user.id), class:"btn btn-outline-secondary btn-block" do %>
           <span class="fas fa-user-cog" aria-hidden="true"></span>
         <% end %>
       </th>
