--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -1,15 +1,15 @@
 <%= form_for(book) do |f| %>
   <div class="form-title row">
     <%= f.label :Title %>
-    <%= f.text_field :title, class: "col-xs-12" %>
+    <%= f.text_field :title, class: "form-control book_title" %>
   </div>
 
   <div class="form-body row">
   	<%= f.label :Opinion %>
-    <%= f.text_area :body, class: "col-xs-12" %>
+    <%= f.text_area :body, class: "form-control book_body" %>
   </div>
 
   <div class="actions row">
-    <%= f.submit class: "btn btn-primary col-xs-12" %>
+    <%= f.submit class: "btn btn-success" %>
   </div>
 <% end %>
