--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,19 +7,22 @@
       <%= render 'books/book', book: @book %>
     </div>
     <div class="col-md-8 offset-md-1">
-      <table class="table book-index">
-        <h2>Books</h2>
+      <h2>Books</h2>
+      <table class="table table-hover table-inverse">
         <thead>
-          <th></th>
-          <th>Title</th>
-          <th>Opinion</th>
+          <tr>
+            <th></th>
+            <th>Title</th>
+            <th>Opinion</th>
+            <th colspan="3"></th>
+          </tr>
         </thead>
         <tbody>
           <% @books.each do |book| %>
             <tr>
               <td>
                 <%= link_to user_path(book.user) do %>
-                  <%= attachment_image_tag book.user, :profile_image, :fill, 40, 40,fallback: "no_image.jpg"%>
+                  <%= attachment_image_tag book.user, :profile_image, :fill, 40, 40,fallback: "no_image.jpg",size:'40x40' %>
                 <% end %>
               </td>
               <td><%= link_to book.title, book_path(book.id) %></td>
