--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,10 +7,9 @@
     </div>
     <div class="col-md-8 offset-md-1">
       <h1>Book detail</h1>
-      <table class="table table-user-show">
+      <table class="table table-hover table-inverse">
         <tr>
-          <td><%= attachment_image_tag @book.user, :profile_image, :fill, 30, 30, fallback: "no_image.jpg"%></td>
-          <td><%= link_to @user.name, user_path(@user) %></td>
+          <td><%= attachment_image_tag @book.user, :profile_image, :fill, 40, 40, fallback: "no_image.jpg",size:'40x40' %><br><%= link_to @user.name, user_path(@user) %></td>
           <td><%= @book.title %></td>
           <td><%= @book.body %></td>
           <% if @book.user_id == current_user.id %>
