--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -3,11 +3,11 @@
   <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
   	  <div class="top-text">
   		<h1>Welcom to
-  		  <span class="fas fa-book" aria-hidden="true"></span>
+  		  <i class="fas fa-book"></i>
   		  <strong>Bookers!!</strong>
   		</h1>
   		<p>In
-  		  <span class="fas fa-book" aria-hidden="true"></span>
+  		  <i class="fas fa-book"></i>
   		  <strong>Bookers</strong>,
   		</p>
   		<p>
