--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
       <%= render 'books/book', book: @book %>
     </div>
     <div class="col-md-8 offset-md-1">
-  	  <table class="table table-sm user-index">
+  	  <table class="table">
 	  	  <h2>Users</h2>
         <thead>
           <th>image</th>
@@ -16,7 +16,7 @@
   	  	<tbody>
   	  	  <% @users.each do |user| %>
 	  	  	<tr>
-	  	  	  <td><%= attachment_image_tag user, :profile_image, :fill, 50, 50,fallback: "no_image.jpg"%></td>
+	  	  	  <td><%= attachment_image_tag user, :profile_image, :fill, 40, 40,fallback: "no_image.jpg",size:'40x40' %></td>
 	  	  	  <td><%= user.name %></td>
 	  	  	  <td><%= link_to "Show", "/users/#{user.id}" %></td>
 	  	  	</tr>
