--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,12 +6,12 @@
       <%= render 'books/book', book: @book %>
     </div>
     <div class="col-md-8 offset-md-1">
-      <h2>Book detail</h2>
+      <h2>Books</h2>
       <table class="table table-user-show">
         <% @books.each do |book| %>
           <tr>
             <td><%= link_to user_path(@user) do %>
-                <%= attachment_image_tag @user, :profile_image, :fill, 40, 40, fallback: "no_image.jpg"%>
+                <%= attachment_image_tag @user, :profile_image, :fill, 40, 40, fallback: "no_image.jpg",size:'40x40' %>
                 <% end %>
             </td>
               <td><%= link_to book.title, book_path(book.id) %></td>
